samples/_failures_safe/1761651940_6207c6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_631e00f5.c: In function ‘main’:
./samples/SAFE/__tmp_631e00f5.c:170:5: error: expected expression at end of input
  170 |     printf("Tokens found: %d\n",
      |     ^~~~~~
./samples/SAFE/__tmp_631e00f5.c:170:5: error: expected declaration or statement at end of input
